Switch to javacc generated parser.